--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,21 +2,44 @@ unit_tests:
 
 	
 netlify_review:
-	image: 
-	stages: test
-	script:
-	    - npm ci
-	    - npm test
+ image: 
+ stage: deploy_review
+ rules:
+  - if: $CI_COMMIT_REF_NAME != $CI_DEFAULT_BRANCH
+environment:
+   name: preview/$CI_COMMIT_REF_SLUG
+   url:	 $REVIEW_URL
+before_script: 
+  	- npm install -g netlify-cli
+  	- apk add curl jq
+script: 
+	- netlify --version
+	- netlify status
+        - echo "Deploying to the site id $NETLIFY_SITE_ID
+	- netlify deploy --dir build --json | tee deploy-result.json
+     	- REVIEW_URL=$(jq -r '.deploy_url' deploy-result.json)
+	- echo $REVIEW_URL
+     	- curl $REVIEW_URL | grep 'Gitlab'
+	- echo "$REVIEW_URL=$REVIEW_URL" > deploy.env
+     	- cat deploy.env
 artifacts:
-	when: always
-	reports:
-		junits: reports/junit.xml
-	
-netlify:
-	image: node:22-alpine
-	stage: .pre
-	variables:
+reports:
+ dotenv: deploy.env
 
-scripts:
-	-npm install -g netlify-cli
-	-netlify --version
+ netlify_staging:
+ image: 
+ stage: deploy_staging
+ rules:
+  - if: $CI_COMMIT_REF_NAME != $CI_DEFAULT_BRANCH
+before_script: 
+  	- npm install -g netlify-cli
+  	- apk add curl
+script: 
+	- netlify --version
+	- netlify status
+        - echo "Deploying to the site id $NETLIFY_SITE_ID
+	- netlify deploy --dir build --json | tee deploy-result.json
+ 	- netlify deploy --alias staging --dir build
+  	- curl 'https://staging-learn-gitlab-mindit.netlify.app/' | grep 'Gitlab'
+
+ 
