--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,45 +1,21 @@
 unit_tests:
-
-	
-netlify_review:
- image: 
- stage: deploy_review
- rules:
-  - if: $CI_COMMIT_REF_NAME != $CI_DEFAULT_BRANCH
-environment:
-   name: preview/$CI_COMMIT_REF_SLUG
-   url:	 $REVIEW_URL
-before_script: 
-  	- npm install -g netlify-cli
-  	- apk add curl jq
+stage: test
 script: 
-- netlify --version
-- netlify status
-- echo "Deploying to the site id $NETLIFY_SITE_ID
-- netlify deploy --dir build --json | tee deploy-result.json
-- REVIEW_URL=$(jq -r '.deploy_url' deploy-result.json)
-- echo $REVIEW_URL
-- curl $REVIEW_URL | grep 'Gitlab'
-- echo "$REVIEW_URL=$REVIEW_URL" > deploy.env
-- cat deploy.env
+- npm ci
+- npm test
 artifacts:
+  when:always
 reports:
- dotenv: deploy.env
+  junit: reports/junit.xml
 
- netlify_staging:
- image: 
- stage: deploy_staging
- rules:
-  - if: $CI_COMMIT_REF_NAME != $CI_DEFAULT_BRANCH
-before_script: 
-  	- npm install -g netlify-cli
-  	- apk add curl
+netlify:
+image: node:22-alpine
+ stage: .pre
+variables:
+ NETLIFY_SITE_ID: '9ff9b087-22b9-4146-931d-5c5622e0261d'
 script: 
-- netlify --version
-- netlify status
-- echo "Deploying to the site id $NETLIFY_SITE_ID
-- netlify deploy --dir build --json | tee deploy-result.json
-- netlify deploy --alias staging --dir build
-- curl 'https://staging-learn-gitlab-mindit.netlify.app/' | grep 'Gitlab'
-
+	- npm install -g netlify-cli
+	- netlify --version
+	- echo "Deploying to the site id $NETLIFY_SITE_ID"
+ 
  
