--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,5 +17,6 @@ script:
 - npm install -g netlify-cli
 - netlify --version
 - echo "Deploying to the site id $NETLIFY_SITE_ID"
+- netlify deploy --dir build --json | tee deploy-result.json
  
  
