--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,22 +1,75 @@
-unit_tests:
-stage: test
-script: 
-- npm ci
-- npm test
-artifacts:
-  when:always
-reports:
-  junit: reports/junit.xml
-
-netlify:
-image: node:22-alpine
- stage: .pre
 variables:
- NETLIFY_SITE_ID: '9ff9b087-22b9-4146-931d-5c5622e0261d'
-script: 
-- npm install -g netlify-cli
-- netlify --version
-- echo "Deploying to the site id $NETLIFY_SITE_ID"
-- netlify deploy --dir build --json | tee deploy-result.json
- 
- 
+  NETLIFY_SITE_ID: '9ff9b087-22b9-4146-931d-5c5622e0261d'
+
+stages: 
+    - build
+    - test
+    - deploy_staging
+    -  deploy_prod
+    
+build_website:
+    image: node:22-alpine
+    stage: build
+    script:
+        - node --version
+        - npm --version
+        - npm cli
+        - npm run build
+    artifacts:
+      paths:
+        - build/
+        
+  test_artifact:
+    image: alpine
+    stage: test
+    script:
+      - test -f build/index.html
+
+  unit_test:
+    image: node:22-alpine
+    stage: test
+    script:
+      - npm ci
+      - npm test
+    artifacts:
+      when: always
+      reports:
+         junit: reports/junit.xml
+
+   netlify_staging:
+    image: node:22-alpine
+    stage: deploy_staging
+    rules:
+      - if: $CI_COMMIT_REF_NAME != $CI_DEFAULT_BRANCH
+    variables:
+      NETLIFY_SITE_ID: '9ff9b087-22b9-4146-931d-5c5622e0261d'
+    before_script:
+      - npm install -g netlify-cli
+      - apk add curl
+    script:
+      - netlify --version
+      - netlify --version
+      - echo "Deploying to the site id $NETLIFY_SITE_ID"
+      - netlify deploy --alias staging --dir build
+      - curl 'https://staging-learn-gitlab-mindit.netlify.app/' | grep 'Gitlab'
+      
+
+  netlify_prod:
+    image: node:22-alpine
+    stage: deploy_prod
+    rules:
+      - if: $CI_COMMIT_REF_NAME != $CI_DEFAULT_BRANCH
+    variables:
+      NETLIFY_SITE_ID: '9ff9b087-22b9-4146-931d-5c5622e0261d'
+    before_script:
+      - npm install -g netlify-cli
+      - apk add curl
+    script:
+      - netlify --version
+      - netlify --version
+      - echo "Deploying to the site id $NETLIFY_SITE_ID"
+      - netlify deploy --prod --dir build
+      - curl 'https://prod-learn-gitlab-mindit.netlify.app/' | grep 'Gitlab'
+      
+    
+    
